k8s/raw/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybershield
  labels:
    app.kubernetes.io/name: cybershield
    app.kubernetes.io/part-of: cybershield
